style: Align text with correct property
Using the correct style property to align the text.

I had actually forgotten about this property after spending so much time
trying to understand box-model and the different use cases.

Seeing two inline tags laid out in normal flow triggered as if they were
boxes, triggered the misunderstanding. I'm grateful for the solution
file(s), allowing me to compare, learn and adjust accordingly.

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -37,12 +37,7 @@ body {
 .button-container {
     background: #e3f4ff;
     padding: 10px;
-}
-
-.button-container__text {
-    display: block;
-    width: 50px;
-    margin: auto;
+    text-align: center;
 }
 
 button {
